--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,16 +35,16 @@ dependencies {
     compile files('libs/imagetouch.jar')
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.android.support:design:23.4.0'
-    compile 'com.github.rey5137:material:1.2.4'
+    compile 'com.github.rey5137:material:1.2.4'//这个是 md 的各种控件
     compile 'com.yolanda.nohttp:nohttp:1.0.2'
-    compile 'com.google.android.gms:play-services-appindexing:8.4.0'
+//    compile 'com.google.android.gms:play-services-appindexing:8.4.0'
     compile 'com.github.bumptech.glide:glide:3.6.1'
-    compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha2'
+//    compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha2'
 //    compile 'com.github.danylovolokh:video-player-manager:0.2.0'
-    compile 'com.github.danylovolokh:list-visibility-utils:0.2.0'
+//    compile 'com.github.danylovolokh:list-visibility-utils:0.2.0'
 //    compile 'com.github.chrisbanes:PhotoView:1.2.6'
     compile 'com.android.support:support-v4:23.4.0'
-    compile 'com.google.android.gms:play-services:8.4.0'
+//    compile 'com.google.android.gms:play-services:8.4.0'
     testCompile 'junit:junit:4.12'
     androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.2'
     androidTestCompile 'com.android.support.test:runner:0.5'
