--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,6 +56,12 @@ dependencies {
     compile files('libs/ShareSDK-Core-2.7.4.jar')
     compile 'tv.danmaku.ijk.media:ijkplayer-java:0.6.0'
     compile 'tv.danmaku.ijk.media:ijkplayer-armv7a:0.6.0'
+
+
+//    //修改glide 的网络栈
+    compile 'com.github.bumptech.glide:okhttp-integration:1.3.1@aar'
+    compile 'com.squareup.okhttp:okhttp:2.5.0'
+
 }
 
 apt {
