--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,8 @@ dependencies {
 
     compile 'com.github.bumptech.glide:glide:3.7.0'
 
+    compile 'jp.wasabeef:recyclerview-animators:2.2.4'//recycle的动画
+
 
 
 }
