--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,8 +58,12 @@ dependencies {
 
     compile 'com.github.bumptech.glide:glide:3.7.0'
 
-    compile 'jp.wasabeef:recyclerview-animators:2.2.4'//recycle的动画
+//glide集成网络栈
+//    compile 'com.github.bumptech.glide:volley-integration:1.3.1@aar'
+//    compile 'com.mcxiaoke.volley:library:1.0.8'
 
+
+    compile 'jp.wasabeef:recyclerview-animators:2.2.4'//recycle的动画
 
 
 }
