--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,8 +35,8 @@
         <activity
             android:name=".mode.activity.MainActivity_"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustNothing"
-            >
+            android:theme="@style/AppTheme"
+            android:windowSoftInputMode="adjustNothing">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
