--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,19 +31,20 @@ dependencies {
     compile files('libs/systembartint.jar')
     apt "org.androidannotations:androidannotations:$AAVersion"
     compile "org.androidannotations:androidannotations-api:$AAVersion"
-//    compile files('libs/videojj_iva_4.0.jar')//因为冲突 所以去掉了
+    //    compile files('libs/videojj_iva_4.0.jar')//因为冲突 所以去掉了
     compile files('libs/imagetouch.jar')
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.android.support:design:23.4.0'
-    compile 'com.github.rey5137:material:1.2.4'//这个是 md 的各种控件
+    compile 'com.github.rey5137:material:1.2.4'
+    //这个是 md 的各种控件
     compile 'com.yolanda.nohttp:nohttp:1.0.2'
-//    compile 'com.google.android.gms:play-services-appindexing:8.4.0'
-//    compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha2'
-//    compile 'com.github.danylovolokh:video-player-manager:0.2.0'
-//    compile 'com.github.danylovolokh:list-visibility-utils:0.2.0'
+    //    compile 'com.google.android.gms:play-services-appindexing:8.4.0'
+    //    compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha2'
+    //    compile 'com.github.danylovolokh:video-player-manager:0.2.0'
+    //    compile 'com.github.danylovolokh:list-visibility-utils:0.2.0'
     compile 'com.github.chrisbanes:PhotoView:1.2.6'
     compile 'com.android.support:support-v4:23.4.0'
-//    compile 'com.google.android.gms:play-services:8.4.0'
+    //    compile 'com.google.android.gms:play-services:8.4.0'
     testCompile 'junit:junit:4.12'
     androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.2'
     androidTestCompile 'com.android.support.test:runner:0.5'
@@ -55,17 +56,13 @@ dependencies {
     compile files('libs/ShareSDK-Core-2.7.4.jar')
     compile 'tv.danmaku.ijk.media:ijkplayer-java:0.6.0'
     compile 'tv.danmaku.ijk.media:ijkplayer-armv7a:0.6.0'
-
     compile 'com.github.bumptech.glide:glide:3.7.0'
-
-//glide集成网络栈
+    //glide集成网络栈
     compile 'com.github.bumptech.glide:volley-integration:1.3.1@aar'
     compile 'com.mcxiaoke.volley:library:1.0.8'
-
-
-    compile 'jp.wasabeef:recyclerview-animators:2.2.4'//recycle的动画
-
-
+    compile 'jp.wasabeef:recyclerview-animators:2.2.4'
+    //recycle的动画
+    compile files('libs/jsoup-1.9.2.jar')
 }
 
 apt {
